# osim-rl

./: README.md  pyproject.toml
examples/: basic.py  submission.py  train_arm.py
examples/legacy/: example.py  round2_submit.py  round_2_entrypoint.py  submit.py  train.arm.py
examples/under-construction/: train.arm.py  train.ddpg.py
osim/env/: __init__.py  arm.py  osim.py
osim/env/legacy/: arm.py  osim.py  run.py
osim/env/utils/: mygym.py
osim/tests/: test_env.py  test_manager.py  test_obstacles.py  test_rollback.py  test_round2.py  test_segfault.py  test_simbody.py  test_simulation.py
